Added like and tagging functionality

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -7,5 +7,6 @@
     <img src="{{ url_for('static', filename='img/' + post.image_file) }}">
 </a>
 <p>{{ post.content }}</p>
+{{ post.likes.count() }} likes
 {% endfor %}
 {% endblock content %}
