--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -15,6 +15,7 @@
 {% for comment in comments %}
 <p>"{{ comment.content }}" &nbsp <small>Author: {{ comment.user.username }}</small></p>
 {% endfor %}
+{% if current_user.is_authenticated %}
 <form method="POST" action="{{ url_for('post_comment', post_id=post.id) }}">
     {{ form.hidden_tag() }}
     <div class="">
@@ -27,6 +28,7 @@
         {{ form.submit() }}
     </div>
 </form>
+{% endif %}
 
 {% if current_user.is_authenticated %}
 {% if current_user.has_liked(post) %}
