--- a/blog/static/styles.css
+++ b/blog/static/styles.css
@@ -1,4 +1,191 @@
 body {
-    color: darkcyan;
-    background-color: darkgoldenrod;
+    margin: 0;
+    font-weight: 300;
+    color: black;
+    background-color: #2EC4B6;
+    align-items: center;
+}
+ul {
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    display: flex;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+#navigation {
+    background: #FDFFFC;
+    overflow: hidden;
+    margin: 0;
+}
+.container {
+    display: grid;
+    grid-template-columns: 6fr 2.5fr;
+    margin: 0;
+}
+.login-items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 0;
+}
+.logo {
+    width: 250px;
+    height: 55px;
+
+}
+ul li {
+    padding: 1.6rem;
+    font-weight: bold;
+}
+ul li a:hover {
+    color: red;
+}
+
+
+
+
+
+.login_form {
+    width: 320px;
+    height:420px;
+    background: #FF9F1C;
+    color: #011627;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+.avatar {
+    width:100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
+.login_form h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+}
+.login_form p {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.login_form input {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.login_form input[type='text'], input[type='password'] {
+    border: none;
+    border-bottom: 1px solid;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    font-size: 14px;
+}
+
+.login_form input[type='submit'] {
+    border: none;
+    outline: none;
+    height: 40px;
+    font-size: 14px;
+    border-radius: 20px;
+}
+.login_form input[type='submit']:hover {
+    cursor: pointer;
+    background: #E71D36 ;
+    color: #FDFFFC;
+}
+.register-form {
+    width: 450px;
+    height:520px;
+    background: #FF9F1C;
+    color: #011627;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+.register-form h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+}
+.register-form input {
+    width: 100%;
+    margin-bottom: 10px;
+}
+.register-form input[type='text'], input[type='password'] {
+    border: none;
+    border-bottom: 1px solid;
+    background: transparent;
+    outline: none;
+    height: 30px;
+    font-size: 16px;
+}
+.register-form input[type='submit'] {
+    border: none;
+    outline: none;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 20px;
+}
+.blog-posts {
+    width: 25%;
+    max-width: 40rem;
+    max-height: 10rem;
+    padding: 5rem;
+    background-color: lawngreen;
+    box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
+    display: flex;
+    align-items: center;
+    border-radius: 0.8rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+
+}
+.blog-post-image {
+    min-width: 15rem;
+    max-width: 15rem;
+    height: 10rem;
+    transform: translate(-8rem);
+    position: relative;
+}
+.blog-post-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 0.8rem;
+}
+.date span {
+    display: block;
+    color: black;
+    font-size: 0.7rem;
+    font-weight: 600;
+    margin: .5rem 0;
+
+}
+.blog-title {
+    font-size: 1.2rem;
+    margin: 1.5rem 0 2rem;
+    text-transform: uppercase;
+    color: black;
+}
+.blog-text {
+    margin-bottom: 1rem;
+    font-size: .7rem;
 }
