--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>This is About Us page</h1>
+<img src="static/img/like.png">
+
 {% endblock content %}
