--- a/blog/templates/allposts.html
+++ b/blog/templates/allposts.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<a href="{{ url_for('allposts', sortBy='ascending') }}">Date Ascending</a>
+<a href="{{ url_for('allposts', sortBy='descending') }}">Date Descending</a>
+
 {% for post in posts %}
 
 <div class='blog-posts'>
