--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -8,32 +8,61 @@
 </head>
 
 <body>
-    <div id="header">
-        <a href="{{ url_for('home') }}" class="header">Home</a>&nbsp
-        <a href="{{ url_for('about') }}" class="header">About Us</a>&nbsp
-        {% if current_user.is_authenticated %}
-        <span>Hello, {{ current_user.username }}!</span>
-        <a href="{{ url_for('logout') }}" class="header">Logout</a>&nbsp
-        {% else %}
-        <span>Hello, Guest!</span>
-        <a href="{{ url_for('login') }}" class="header">Login</a>&nbsp
-        <a href="{{ url_for('register') }}" class="header">Register</a>
-        {% endif %}
-
-        <div id="flashes">
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            <ulclass=flashes>
-                {% for message in messages %}
-                <li>{{ message }}</li>
-                {% endfor %}
+    <nav id='navigation'>
+        <div class='container'>
+            <div>
+                <ul>
+                    <li><img src="{{ url_for('static', filename='img/logo.png' ) }}" class='logo'></li>
+                    <li><a href="{{ url_for('home') }}">Home</a>&nbsp</li>
+                    <li><a href="{{ url_for('about') }}">About Us</a>&nbsp</li>
+                    <li><a href="{{ url_for('allposts') }}">All Posts</a>&nbsp</li>
+                    <li>
+                        <form method="POST">
+                            <input type='text' name='search_term' placeholder="Blog Post Search">
+                            <input type='submit' formaction='/search' name='Search'>
+                        </form>
+                    </li>
                 </ul>
-                {% endif %}
-                {% endwith %}
+            </div>
+            <div class='login-items'>
+                <ul>
+                    <li>
+                        {% if current_user.is_authenticated %}
+                        <span>Hello, {{ current_user.username }}!</span>
+                        {% else %}
+                        <span>Hello, Guest!</span>
+                        {% endif %}
+                    </li>
+                    <li>
+                        {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('view_tagged') }}">Tagged Posts</a>
+                        {% else %}
+                        <a href="{{ url_for('login') }}">Login</a>&nbsp
+                        {% endif %}
+                    </li>
+                    <li>
+                        {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('logout') }}">Logout</a>&nbsp
+                        {% else %}
+                        <a href="{{ url_for('register') }}">Register</a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </div>
+
         </div>
-        {% if current_user.is_authenticated %}
-        <a href="{{ url_for('view_tagged') }}" class="header">Tagged Posts</a>
+    </nav>
+
+    <div id="flashes">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
         {% endif %}
+        {% endwith %}
     </div>
 
     <div id="content">
