--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -1,22 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-<form method="POST" action="">
-    {{ form.csrf_token }}
-    {{ form.username.label }} {{ form.username }}
-    {% for error in form.username.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %}
-    {{ form.first_name.label }} {{ form.first_name }}
-    {{ form.last_name.label }} {{ form.last_name }}
-    {{ form.email.label }} {{ form.email }}
-    {% for error in form.email.errors %} <span style="color: red;">[{{ error }}]</span>{% endfor %}
-    {{ form.password.label }} {{ form.password }}
-    {% for error in form.password.errors %}
-    <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-    {{ form.confirm_password.label }} {{ form.confirm_password }}
-    {% for error in form.confirm_password.errors %}
-    <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-    <br>
-    <input type="submit" value="Register">
-</form>
+<div class='register-form'>
+    <img src='static/img/avatar.png' class='avatar'>
+    <h1>Register Here</h1>
+    <form method="POST" action="">
+        {{ form.csrf_token }}
+        {{ form.username.label }} {{ form.username }}
+        {% for error in form.username.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %}
+        {{ form.first_name.label }} {{ form.first_name }}
+        {{ form.last_name.label }} {{ form.last_name }}
+        {{ form.email.label }} {{ form.email }}
+        {% for error in form.email.errors %} <span style="color: red;">[{{ error }}]</span>{% endfor %}
+        {{ form.password.label }} {{ form.password }}
+        {% for error in form.password.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        {{ form.confirm_password.label }} {{ form.confirm_password }}
+        {% for error in form.confirm_password.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        <br>
+        <input type="submit" value="Register">
+    </form>
+</div>
+
+
 {% endblock content %}
