Small changes to blog"

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,6 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>This is About Us page</h1>
-<img src="static/img/like.png">
+<h1>This is About Me page</h1>
 
 {% endblock content %}
