--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><img src="{{ url_for('static', filename='img/logo.png' ) }}" class='logo'></li>
                     <li><a href="{{ url_for('home') }}">Home</a>&nbsp</li>
-                    <li><a href="{{ url_for('about') }}">About Us</a>&nbsp</li>
+                    <li><a href="{{ url_for('about') }}">About Me</a>&nbsp</li>
                     <li><a href="{{ url_for('allposts') }}">All Posts</a>&nbsp</li>
                     <li>
                         <form method="POST">
