--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 
-<h1>This is About Me page</h1>
-
+<h1 class='about-title'>This is About Me page</h1>
+<div class='my-pic'><img src='static/img/myself.jpg' class='me-pic'></div>
+<p class='about-info'>Hi, my name is Curtis Mills. <br> I am currently studying at Cardiff University towards my MSc in
+    Computing and IT
+    Management. <br> I hope you like my blog!</p>
 {% endblock content %}
