--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class='home-heading'>
+    <h1>Most Recent Blog Posts</h1>
+</div>
 <div class='content-wrap'>
     {% for post in posts %}
 
