--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -13,7 +13,7 @@
         <header>
             <div class='container'>
 
-                <img src="{{ url_for('static', filename='img/logo.png' ) }}" class='logo'>
+                <img src="{{ url_for('static', filename='static/img/logo.png' ) }}" class='logo'>
 
                 <nav>
                     <ul>
